logs/Slang/generated/hdlconv/hdlconvertor_p240.sv.log
name: hdlconvertor_p240
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p240.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p240.sv:4:14: error: language feature not yet supported
initial a <= #4 0;
             ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p240.sv:5:14: error: language feature not yet supported
initial a <= #4 1;
             ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p240.sv:15:17: error: language feature not yet supported
initial #8 a <= #8 1;
                ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p240.sv:16:18: error: language feature not yet supported
initial #12 a <= #4 0;
                 ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p240.sv:25:7: error: language feature not yet supported
r1 <= # (i*10) i[0];
      ^~~~~~~~~~~~~
